SERVER-18838 flush WT metadata during create/drop so we don't see missing files after a crash.